--- a/pages/resumes.html
+++ b/pages/resumes.html
@@ -92,12 +92,10 @@
 
       <a href="resumes/article4.html">
         <div id="resume4">
-          <h1>Titre4</h1>
+          <h1>Peach Fuzz, la nouvelle couleur de Pantone</h1>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Velit,
-            consequatur suscipit! Hic, possimus! Officiis molestiae reiciendis
-            voluptatum illo, deleniti aliquam mollitia harum, soluta sed tempore
-            officia consequatur! Harum, sint asperiores.
+            Pantone a récemment dévoilé "Peach Fuzz" comme la couleur de l'année
+            2024, caractérisée par une teinte chaleureuse et réconfortante.
           </p>
           <img src="../images/logo.svg" alt="" title="Logo du blog" />
         </div>
