--- a/pages/resumes/article4.html
+++ b/pages/resumes/article4.html
@@ -44,7 +44,7 @@
 
     <div id="conteneur">
       <div id="resume4">
-        <h1>Titre</h1>
+        <h1>Peach Fuzz, la nouvelle couleur de Pantone</h1>
         <p>
           Pantone a récemment dévoilé "Peach Fuzz" comme la couleur de l'année
           2024, caractérisée par une teinte chaleureuse et réconfortante.
